# schoolsite

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_import.csv  todolist.md  todolist.txt
dashboard/management/commands/: demo_seed.py
hbr/: db.demo.sqlite3  db.sqlite3  manage.py
hbr/academics/: admin.py  models.py  result_utils.py  urls.py  views.py
hbr/academics/migrations/: 0001_initial.py  0002_alter_examresult_status_examassignment.py  0003_examresult_marking_disabled.py  0004_alter_examresult_status.py  0005_exam_marks_entry_open.py
hbr/academics/templatetags/: academics_tags.py
hbr/administration/: forms.py  models.py  urls.py  views.py
hbr/administration/migrations/: 0001_initial.py
hbr/attendance/: admin.py  models.py  urls.py  views.py
hbr/attendance/migrations/: 0001_initial.py
hbr/base/: context_processors.py  urls.py  views.py
hbr/base/migrations/: 0001_initial.py
hbr/dashboard/: admin.py  forms.py  middleware.py  models.py  pdf_utils.py  urls.py  views.py
hbr/dashboard/migrations/: 0001_initial.py  0002_student_profile_photo.py  0005_leave.py  (+16 more)
hbr/front_cms/: apps.py  forms.py  models.py  urls.py  views.py
hbr/hbr/: asgi.py  settings.py  urls.py  wsgi.py
hbr/leave/: admin.py  models.py  urls.py  views.py
hbr/notices/: forms.py  models.py  urls.py  views.py
hbr/students/: admin.py  data_utils.py  forms.py  generation_utils.py  models.py  pdf_utils.py  urls.py  views.py
hbr/teachers/: admin.py  forms.py  models.py  urls.py  views.py
hbr/templates/: footer.html  header.html  links.html  main.html
(+111 files in other folders)
