[project]
name = "schoolsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-browser-reload>=1.21.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfkit>=1.0.0",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "reportlab>=4.4.4",
    "whitenoise",
    "wkhtmltopdf>=0.2",
]
